# test

./: .gitignore  1  TimerTest.cpp  TimerTest2.cpp  async.cpp  class.cpp  compile_commands.json  fib.cpp  fib2.cpp  hoge.cpp  main.c  main.cpp  main2.cpp  matrix.py  memory.c  montyhallproblem.ps1  mylib.cpp  mylib.ixx  smartptr.cpp  sub.cpp  sun.cpp  test.cpp  test.hpp  test.py  test2.cpp  timerTest.c
BinarySearchTree/: compile_commands.json  hoge  hoge.asm  main.cpp
BlockChain/: CMakeSettings.json
BlockChain/BlockChain/: CMakeLists.txt
BlockChain/BlockChain/BlockChain/: BlockChain.cpp  BlockChain.h  CMakeLists.txt
DllExportTest/DllExportTest/: DllExportTest.sln
DllExportTest/DllExportTest/DllExportTest/: DllExportTest.cpp  DllExportTest.vcxproj  DllExportTest.vcxproj.filters
DllExportTest/DllExportTest/LibraryTest/: LibraryTest.cpp  LibraryTest.h  LibraryTest.vcxproj  LibraryTest.vcxproj.filters  cpp.hint
DllExportTest/DllExportTest/UnitTestStudy/: UnitTestStudy.cpp  UnitTestStudy.vcxproj  UnitTestStudy.vcxproj.filters
E/: main.cpp
ML/ML/: CsObject.cs  Form1.cs  ML.csproj  ML.sln  Program.cs
ML/MlLib/: MlLib.cpp  MlLib.h  MlLib.vcxproj  dllmain.cpp
ML/NativeMlLibTest/: NativeMlLibTest.vcxproj
ML/UnitTestMiLib/: UnitTestMiLib.cpp  UnitTestMiLib.vcxproj
TestRust/: Cargo.toml
asm/: main.c
b/: main.cpp
bench/: main.cpp
carry/: Program.cpp  Program.cs
char/: char.cpp  main.cpp
char/WhiRedStar/: WhiRedStar.sln
char/WhiRedStar/WhiRedStar/: .gitignore  IEntity.cpp  IEntity.h  Main.cpp  WhiRedStar.cpp  WhiRedStar.h  WhiRedStar.vcxproj  WhiRedStar.vcxproj.filters
clibtest/: main.c  mylib.c
cs/: Program.cs
cs/AstTest/: Program.cs
cs/Test1/: Program.cs
cs/cs2/Test/: Program.cs
cs/msgroop/: Program.cs
cs/othello/: Program.cs
cs/testAPI/: WeatherForecast.cs
cs/testAPI/Controllers/: WeatherForecastController.cs
cs/testAPI/Properties/: launchSettings.json
cython/: readme.txt
gcc_clang/: clang.cpp  gcc.cpp
lib/: c.cpp
libtest/: main.cpp  sub.cpp  sub.hpp
lmdexp/: main.cpp  sub.cpp  sub.h
macrotest/: main.cpp
module/: compile_flags.txt  main.cpp  mylib.cpp  mylib.ixx
namespacetest/: main.cpp
plym/: main.cpp
publick-key-cryptography/: main.cpp  main.hpp
pycapi/: .gitignore  Makefile  main.c
rust/: .gitignore
rust/AngoTuka/: Cargo.toml
rust/AngoTuka/src/: main.rs
rust/dispatch/src/: main.cpp  main.rs
rust/exam/: Cargo.toml
rust/hello-wasm/: Cargo.toml
rust/hikaku/: Cargo.toml
rust/kazuate/: Makefile  compile_flags.txt  main.cpp
template/: main.cpp
using/: main.cpp  main.hpp
utf8test/test/: test.sln
xcompile/: main.cpp
(+9 files in other folders)
